# RobotFrameworkBaseProject

./: README.md  pyproject.toml
api_tests/: APITestExample.robot
robotframeworkbaseproject/api_tests/: apiresource.robot
robotframeworkbaseproject/ui_tests/: DriverManager.py  uiresource.robot
ui_tests/: UITestExample.robot
