[tool.poetry]
name = "RobotFrameworkBaseProject"
version = "0.1.0"
description = ""
authors = ["lmartinez <lmartinez@switchfly.com>"]

[tool.poetry.dependencies]
python = "^3.7"
robotframework = "^3.1"
robotframework-seleniumlibrary = "^4.1"
requests = "^2.22"
robotframework-requests = "^0.6.2"
webdriver_manager = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
